[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/RAVIE.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=2]
[ext_resource path="res://page/navigation/sliderSceneGameChoose.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/mascot.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/lock.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.05261
margin_top = 1.05264
margin_right = 1.05261
margin_bottom = 1.05261
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.128906
anchor_top = 0.0533333
anchor_right = 0.894531
anchor_bottom = 0.113333
margin_bottom = -22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.843137, 0.411765, 0.211765, 1 )
text = "NOM DU JEU"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.571598
anchor_top = 0.222368
anchor_right = 0.934879
anchor_bottom = 0.859035
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Easy" type="Button" parent="."]
anchor_left = 0.0645045
anchor_top = 0.211667
anchor_right = 0.437551
anchor_bottom = 0.371667
margin_top = -7.62939e-06
theme = ExtResource( 2 )
text = "Facile"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Normal" type="Button" parent="."]
anchor_left = 0.0635279
anchor_top = 0.46
anchor_right = 0.436575
anchor_bottom = 0.62
theme = ExtResource( 2 )
disabled = true
text = "Moyen"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Hard" type="Button" parent="."]
anchor_left = 0.0655325
anchor_top = 0.71693
anchor_right = 0.438579
anchor_bottom = 0.87693
theme = ExtResource( 2 )
disabled = true
text = "Difficile"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Memory" type="Button" parent="."]
visible = false
anchor_left = 0.0780222
anchor_top = 0.374386
anchor_right = 0.451069
anchor_bottom = 0.694386
theme = ExtResource( 2 )
text = "Jouer"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="lock1" type="TextureRect" parent="."]
anchor_left = 0.446289
anchor_top = 0.46114
anchor_right = 0.540039
anchor_bottom = 0.62114
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="lock2" type="TextureRect" parent="."]
anchor_left = 0.446289
anchor_top = 0.713772
anchor_right = 0.540039
anchor_bottom = 0.873772
margin_top = -3.05176e-05
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="Memory" to="." method="_on_Memory_pressed"]
